fix overflow in homepage

--- a/decidim-saas-vivaio_delle_idee/app/packs/stylesheets/vivaio_delle_idee/body.scss
+++ b/decidim-saas-vivaio_delle_idee/app/packs/stylesheets/vivaio_delle_idee/body.scss
@@ -15,3 +15,7 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Tipotype-Trasandina', sans-serif !important;
 }
+
+body {
+  overflow-x: hidden;
+}
