--- a/decidim-saas-vivaio_delle_idee/app/packs/stylesheets/vivaio_delle_idee/vertical_scroll_content_block.scss
+++ b/decidim-saas-vivaio_delle_idee/app/packs/stylesheets/vivaio_delle_idee/vertical_scroll_content_block.scss
@@ -4,10 +4,10 @@
 
 .scroll-snap {
   &__blocks {
-  @apply flex flex-col py-[2rem] md:pt-[4rem] relative;
+  @apply flex flex-col py-[2rem] md:pt-[4rem] md:justify-center relative;
 
   h2 {
-    @apply text-xl md:!text-[3.75rem] md:leading-none;
+    @apply text-xl md:!text-[2.25rem] lg:!text-[3.75rem] md:leading-none;
   }
 
   img {
@@ -29,15 +29,15 @@
   }
 
   &__block1-description {
-    @apply mt-[1rem] md:mt-[4rem] text-sm md:text-2xl;
+    @apply mt-[1rem] md:mt-[4rem] text-sm sm:text-lg md:text-lg xl:text-2xl;
   }
 
   &__block2-description {
-    @apply mt-[1rem] md:mt-[2rem] lg:mt-[10rem] text-sm md:text-2xl;
+    @apply mt-[1rem] md:mt-[2rem] lg:mt-[10rem] text-sm sm:text-lg md:text-lg xl:text-2xl;
   }
 
   &__block3-description, &__block6-description {
-    @apply mt-[1rem] overflow-y-auto md:overflow-hidden text-sm md:text-2xl;
+    @apply mt-[1rem] overflow-y-auto md:overflow-hidden text-sm sm:text-lg md:text-lg xl:text-2xl;
 
     // Keep inner scrolling behavior but hide visual scrollbar tracks.
     scrollbar-width: none;
@@ -51,22 +51,18 @@
   }
 
   &__block4-description {
-    @apply mt-[1rem] md:mt-[8rem] md:mb-[4rem] text-sm md:text-2xl text-white;
+    @apply mt-[1rem] md:mt-[8rem] md:mb-[4rem] text-sm sm:text-lg md:text-lg xl:text-2xl text-white;
   }
 
   &__block5-description {
-    @apply mt-[1rem] md:mt-[21rem] text-sm md:text-2xl;
+    @apply mt-[1rem] md:mt-[21rem] text-sm sm:text-lg md:text-lg xl:text-2xl;
   }
 
   &__block7-description {
-    @apply mt-[1rem] md:mt-[4rem] text-sm md:text-2xl text-white;
+    @apply mt-[1rem] md:mt-[4rem] text-sm sm:text-lg md:text-lg xl:text-2xl text-white;
   }
 
   &__buttons {
     @apply flex md:inline-flex md:flex-col gap-4 my-[1rem] md:my-[2rem];
-
-    span {
-      @apply text-sm md:text-2xl;
-    }
   }
 }
